# postal-regex

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  python-lint-format.yml
src/postal_regex/: __init__.py  analytics.py  bulk.py  cli.py  core.py  errors.py  loader.py  validator.py
src/postal_regex/data/: postal_codes.json  schema.json
tests/: test_analytics.py  test_bulk.py  test_errors.py  test_loader.py  test_performance.py  test_postal_codes.py  test_schema.py  test_validator.py
