[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postal_regex"
version = "0.1.0"
description = "Postal code regex validator"
authors = [
    {name="Ankit Gadling", email="ankitgadling2@gmail.com"}
]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["postal_regex"]
package-dir = {"" = "src"}
