[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postal_regex"
version = "1.0.0"
description = "Postal code regex validator"
authors = [
    {name="Ankit Gadling", email="ankitgadling2@gmail.com"}
]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
dependencies = [
    "regex==2025.9.18"
]

[tool.setuptools]
packages = ["postal_regex"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
postal_regex = ["data/*.json"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
[project.optional-dependencies]
pandas = ["pandas>=2.0", "pyarrow>=11.0"]
spark = ["pyspark>=4.0"]
dask = ["dask[complete]>=2025.9.0"]
dataframe = ["pandas>=2.0", "pyarrow>=11.0", "dask[complete]>=2025.9.0"]